Fix Images in index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div id="home">
 	<nav class="navbar navbar-dark navbar-expand-md fixed-top">
 		<div class="container-fluid">
-			<a class="navbar-brand" href="#"><img src="/img/nest.png" alt="logo"></a>
+			<a class="navbar-brand" href="#"><img src="img/nest.png" alt="logo"></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menu">
 				<span class="navbar-toggler-icon"></span>
 			</button>
@@ -71,13 +71,13 @@
 			<h3 class="heading">Portfolio</h3>
 			<div class="row no-padding">
 				<div class="col-md-6">
-					<img class="portfolio" src="/img/1.png" alt="">
+					<img class="portfolio" src="img/1.png" alt="">
 				</div>
 				<div class="col-md-6">
 					<img class="portfolio" src="img/2.png" alt="">
 				</div>
 				<div class="col-md-6">
-					<img class="portfolio" src="/img/3.png" alt="">
+					<img class="portfolio" src="img/3.png" alt="">
 				</div>
 				<div class="col-md-6">
 					<img class="portfolio" src="img/4.png" alt="">
@@ -113,7 +113,7 @@
 			<div class="row">
 				<div class="col-md-3"></div>
 				<div class="col-md-6 text-center">
-					<img src="/img/nest.png" alt="">
+					<img src="img/nest.png" alt="">
 					<p>At our core is a collection of design and developmnet solution that represent everything your business needs to compete in the modern marketplace</p>
 					<strong>Our Location</strong>
 					<p>100 Street Name <br>Our City, AA 10000</p>
