--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Nest Light - Responsive Bootstrap 4 Theme</title>
+	<link rel="shortcut icon" href="2285551.ico" type="image/x-icon">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
 	<link rel="stylesheet" href="style.css">
 </head>
